# sr_text_search

./: main.py  models.py  pyproject.toml  update_db.py  update_db.py.bak  views.py
webpage/: package.json  vite.config.ts
webpage/src/: App.vue  main.ts
webpage/src/components/: dialogList.vue  srText.vue
