[project]
name = "sr-text-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.116.1",
]
